# termbox

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Changelog.md  README.md
.github/workflows/: ci.yml
docs/: CMakeLists.txt  Doxyfile.in
src/: CMakeLists.txt
src/demo/: CMakeLists.txt  keyboard.c  output.c  paint.c
src/termbox/: CMakeLists.txt  bytebuffer.h  input.h  macro_utils.h  term.h  termbox.c  termbox.h  utf8.c  utf8.h
